# KeyGlow

./: .gitignore  README.md  keyglow_data.json  pyproject.toml  requirements.txt
keyglow/: data.py  export.py  jokes.py  keyboard.py  logo.py  main.py  map.py  monitor.py  storage.py
